# nixvm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  pages.yml  release-binaries.yml
scripts/: build-claude-root.sh  hvf-test.sh
src/: clock.rs  image.rs  lib.rs  loader.rs  sandbox.rs  vm.rs  wasm.rs
src/abi/: errno.rs  mod.rs
src/abi/arch/: aarch64.rs  mod.rs  x86_64.rs
src/fs/: devfs.rs  fstoolfs.rs  mod.rs  mount.rs  overlay.rs  passthrough.rs  procfs.rs  sysfs.rs  tar.rs  tmpfs.rs
src/kernel/: egress.rs  fd.rs  fs_ext.rs  mem_syscalls.rs  mod.rs  net.rs  path.rs  poll.rs  pty.rs  signal.rs  stat.rs  sys_misc.rs  time.rs
src/vcpu/: ctrl.rs  hvf.rs  interp.rs  interp_x86.rs  mem.rs  mod.rs  pagetable.rs  phys.rs  region.rs  softfloat.rs  vdso.rs
src/vcpu/hvf/: mod.rs  stub.rs  sys.rs  vcpu.rs  vm.rs
src/vcpu/kvm/: mod.rs  paging.rs  sys.rs  vcpu.rs  vm.rs
src/vcpu/softfloat/: tests.rs
tests/: aarch64_smoke.rs  alpine_boot.rs  compute_aarch64.rs  float_diff.rs  hello_elf.rs  hello_interp.rs  identity.rs  mm_brk.rs  mm_mmap.rs  node_probe.rs  nodejit.rs  proc_ipc.rs  sandbox_exec.rs  smp_e2e.rs  vfork_shell.rs  x86_smoke.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  style.css
web/src/components/: NixTerm.vue
